--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "genkit start & next dev --turbopack -p 9002",
     "genkit:dev": "genkit start",
     "genkit:watch": "genkit start --watch",
     "build": "NODE_ENV=production next build",
