They are still not synced

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -4,4 +4,16 @@
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
-  maxInstances: 1
+  minInstances: 0
+  maxInstances: 2
+  cpu: 1
+  memoryMiB: 1024
+
+# We've discovered the following apps in your code.
+# If you want to enable any of these, remove the lines for them below.
+discovery:
+  web:
+    - enabled: true
+      # Do not change the following line.
+      # It is used for internal bookkeeping.
+      # __session: 1h9t4q9r1u
