--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,6 @@
 {
   "hosting": {
     "source": ".",
-    "frameworksBackend": {
-      "region": "us-central1"
-    }
+    "frameworksBackend": {}
   }
 }
