--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "genkit:dev": "genkit start",
     "genkit:watch": "genkit start --watch",
     "build": "NODE_ENV=production next build",
-    "start": "next start",
+    "start": "next dev -p 9002",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
