--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,19 @@
 {
-  "hosting": {
-    "source": ".",
-    "frameworksBackend": {}
+  "hosting": [
+    {
+      "target": "estimates",
+      "source": ".",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "frameworksBackend": {
+        "region": "us-central1"
+      }
+    }
+  ],
+  "functions": {
+    "source": "functions"
   }
 }
