--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/functions/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -39,6 +40,7 @@ next-env.d.ts
 
 .genkit/*
 .env*
+.firebase
 
 # firebase
 firebase-debug.log
